--- a/mac.html
+++ b/mac.html
@@ -138,5 +138,352 @@
         </li>
       </ul>
     </nav>
+    <footer class="footer">
+      <div class="footer__wrap">
+        <section class="footer-summary">
+          <ul>
+            <li class="footer__note">
+              <small>*</small>Trade-in value based on 2019 15-inch MacBook Pro.
+              Trade-in value will vary based on the condition, year, and
+              configuration of your trade-in device. You must be at least 18
+              years old to be eligible to trade in for credit or for an Apple
+              Store Gift Card. Not all devices are eligible for credit. More
+              details are available from Apple’s Mac
+              <a href="#">trade‑in partner</a>
+              and Apple’s iPhone, iPad, and Apple Watch
+              <a href="#">trade‑in partner</a>
+              for trade-in and recycling of eligible devices. Restrictions and
+              limitations may apply. Payments are based on the received device
+              matching the description you provided when your estimate was made.
+              Apple reserves the right to refuse or limit the quantity of any
+              device for any reason. In the
+              <a href="#">Apple Store</a>
+              : Offer only available on presentation of a valid,
+              government-issued photo ID (local law may require saving this
+              information). Value of your current device may be applied toward
+              purchase of a new Apple device. Offer may not be available in all
+              stores. Some stores may have additional requirements.
+            </li>
+          </ul>
+          <ol>
+            <li class="footer__note">Screen size is measured diagonally.</li>
+            <li class="footer__note">
+              1TB = 1 trillion bytes; actual formatted capacity less.
+            </li>
+            <li class="footer__note">
+              Battery life varies by use and configuration; see
+              <a href="#">apple.com/batteries</a>
+              for more information.
+            </li>
+            <li class="footer__note">
+              $4.99/month after free trial. No commitment. Plan automatically
+              renews after trial until cancelled.
+            </li>
+            <li class="footer__note">
+              New subscribers only. $9.99/month after free trial. No commitment.
+              Plan automatically renews after trial until cancelled.
+            </li>
+          </ol>
+          <ul>
+            <li class="footer__note">
+              The COVID‑19 site and app were developed in partnership with CDC.
+              They are not meant as an endorsement of any Apple products.
+            </li>
+          </ul>
+        </section>
+        <div class="footer__h-menu">
+          <a href="index.html">
+            <span class="footer__h-menu-icon">
+              <i class="fab fa-apple"></i>
+            </span>
+          </a>
+          <div class="footer__h-menu-box">
+            <span class="footer__h-menu-icon">
+              <i class="fas fa-chevron-right"></i>
+            </span>
+            <span class="footer__h-menu-title">Mac</span>
+          </div>
+        </div>
+        <nav class="footer-nav">
+          <div class="footer-nav__column">
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">Shop and Learn</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="mac.html" class="footer-nav__list-link">Mac</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="ipad.html" class="footer-nav__list-link">iPad</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="iphone.html" class="footer-nav__list-link">iPhone</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="watch.html" class="footer-nav__list-link">Watch</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="tv.html" class="footer-nav__list-link">TV</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="music.html" class="footer-nav__list-link">Music</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">AirPods</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">HomePod</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">
+                    iPod Touch
+                  </a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">
+                    Accessories
+                  </a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">
+                    Gift Cards
+                  </a>
+                </li>
+              </ul>
+            </section>
+          </div>
+          <div class="footer-nav__column">
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">Services</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Apple Music</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Apple News+</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Apple TV+</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Apple Arcade</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Apple Card</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">iCloud</a>
+                </li>
+              </ul>
+            </section>
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">Account</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Manage Your Apple ID</a
+                  >
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Apple Store Account</a
+                  >
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">iCloud.com</a>
+                </li>
+              </ul>
+            </section>
+          </div>
+          <div class="footer-nav__column">
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">Apple Store</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Find a Store</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Genius Bar</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Today at Apple</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Apple Camp</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Field Trip</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">
+                    Refurbished and Clearance
+                  </a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Financing</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Apple Trade In</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Order Status</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Shopping Help</a>
+                </li>
+              </ul>
+            </section>
+          </div>
+          <div class="footer-nav__column">
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">For Business</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Apple and Business</a
+                  >
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Shop for Business</a
+                  >
+                </li>
+              </ul>
+            </section>
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">For Education</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Apple and Education</a
+                  >
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Shop for K-12</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Shop for College</a>
+                </li>
+              </ul>
+            </section>
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">For Healthcare</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Apple in Healthcare</a
+                  >
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">
+                    Health on Apple Watch
+                  </a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Health Records on iPhone</a
+                  >
+                </li>
+              </ul>
+            </section>
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">For Government</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Shop for Government</a
+                  >
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">
+                    Shop for Veterans and Military
+                  </a>
+                </li>
+              </ul>
+            </section>
+          </div>
+          <div class="footer-nav__column">
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">Apple Values</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Accessibility</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Education</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Environment</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Inclusion and Diversity</a
+                  >
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Privacy</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">
+                    Supplier Responsibility
+                  </a>
+                </li>
+              </ul>
+            </section>
+            <section class="footer-nav__section">
+              <h3 class="footer-nav-title">About Apple</h3>
+              <ul class="footer-nav__list">
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Newsroom</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Apple Leadership</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link"
+                    >Job Opportunities</a
+                  >
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Investors</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Events</a>
+                </li>
+                <li class="footer-nav__list-item">
+                  <a href="#" class="footer-nav__list-link">Contact Apple</a>
+                </li>
+              </ul>
+            </section>
+          </div>
+        </nav>
+        <div class="footer-content">
+          <div class="footer__shop-link">
+            More ways to shop:
+            <a href="#">Find an Apple Store</a>
+            or
+            <a>other retailer</a>
+            near you.<span>Or call 1-800-MY-APPLE.</span>
+          </div>
+          <div class="footer__local">
+            <a href="#" class="footer__local-link">
+              <img src="images/global/32.png" class="footer__local-flag" />
+              United States
+            </a>
+          </div>
+          <div class="footer__legal">
+            <div class="footer__legal-copyright">
+              Copyright &copy; 2020 Apple Inc. All rights reserved.
+            </div>
+            <div class="footer__legal-links">
+              <a href="#" class="footer__legal-link">Privacy Policy</a>
+              <a href="#" class="footer__legal-link">Terms of Use</a>
+              <a href="#" class="footer__legal-link">Sales and Refunds</a>
+              <a href="#" class="footer__legal-link">Legal</a>
+              <a href="#" class="footer__legal-link">Site Map</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
